Archive2/86/496060003f8a71/output
main.cpp: In function 'int main()':
main.cpp:6:53: error: invalid initialization of non-const reference of type 'std::unique_ptr<int>&' from an rvalue of type 'std::_MakeUniq<int>::__single_object {aka std::unique_ptr<int>}'
     std::unique_ptr<int>& p = std::make_unique<int>();
                                                     ^
